--- a/Website/HTML/index/styles.css
+++ b/Website/HTML/index/styles.css
@@ -1,6 +1,8 @@
 .header {
-    margin: auto;
-width: 60%;
-border: 5px solid hsl(167, 100%, 50%);
-padding: 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid hsl(162, 100%, 50%);
+    padding: 10px;
 }
